plugins {
    id 'com.android.library'
}

apply from: '../jacoco.gradle'

android {

    namespace "io.mosip.registration.keymanager"

    lintOptions {
        abortOnError false
        ignoreWarnings true
    }
    compileSdk rootProject.ext.compileSdkVersion

    defaultConfig {
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        debug {
            testCoverageEnabled true
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            all {
                jvmArgs(
                    '-XX:+EnableDynamicAgentLoading',
                    '-Dnet.bytebuddy.experimental=true',
                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
                )
            }
        }
    }

    libraryVariants.every { variant ->
        variant.outputs.each { output ->
            def outputFile = output.outputFile
            if (outputFile != null && outputFile.name.endsWith('.aar')) {
                output.outputFile = new File(projectDir, '../app/new_libs/' + outputFile.name)
            }
        }
    }
}

dependencies {

    implementation 'com.google.dagger:dagger:2.41'
    implementation 'com.google.dagger:dagger-android-support:2.41'
    testImplementation project(':clientmanager')
    annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
    annotationProcessor 'com.google.dagger:dagger-android-processor:2.41'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    implementation 'javax.validation:validation-api:2.0.1.Final'

    testImplementation "junit:junit:4.13.2"
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'


    testImplementation 'org.mockito:mockito-core:5.11.0'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    // https://mvnrepository.com/artifact/commons-codec/commons-codec
    implementation 'commons-codec:commons-codec:1.15'

    implementation "androidx.room:room-common:2.4.2"
    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'

    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'

    implementation 'com.madgag.spongycastle:core:1.58.0.0'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
    implementation 'com.fasterxml.jackson.module:jackson-module-afterburner:2.13.3'
    implementation 'org.bitbucket.b_c:jose4j:0.6.5'

    testImplementation 'net.bytebuddy:byte-buddy:1.14.0'
    testImplementation 'org.objenesis:objenesis:3.3'

}